--- a/ios/rn.xcodeproj/xcshareddata/xcschemes/rn.xcscheme
+++ b/ios/rn.xcodeproj/xcshareddata/xcschemes/rn.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "rn.app"
+               BuildableName = "Task Tracker.app"
                BlueprintName = "rn"
                ReferencedContainer = "container:rn.xcodeproj">
             </BuildableReference>
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "rn.app"
+            BuildableName = "Task Tracker.app"
             BlueprintName = "rn"
             ReferencedContainer = "container:rn.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "rn.app"
+            BuildableName = "Task Tracker.app"
             BlueprintName = "rn"
             ReferencedContainer = "container:rn.xcodeproj">
          </BuildableReference>
